Fix layout issues in mobile when hiding the bar, remove unneeded padding, fix reader change error

--- a/websites/static/css/catalogue.css
+++ b/websites/static/css/catalogue.css
@@ -182,11 +182,6 @@
 	transform: translateX(200%);
 }
 
-.manga-reader .swiper-pagination-progressbar {
-	top: unset;
-	bottom: 0;
-}
-
 .manga-reader .swiper-slide {
 	height: unset;
 	display: flex;
@@ -202,6 +197,7 @@
 
 .manga-reader .swiper-pagination-custom {
 	bottom: 0;
+	position: fixed;
 }
 
 .manga-reader-rtl .video-js .vjs-play-progress:before {
@@ -290,7 +286,6 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 	direction: ltr;
 	font-size: 3.2rem;
 	color: rgb(var(--primary-color));
-	padding: 4rem;
 }
 
 .strip-images-error {
@@ -301,7 +296,6 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 	height: 100%;
 	direction: ltr;
 	font-size: 1.4rem;
-	padding: 4rem;
 	flex-direction: column;
 }
 
